@@ -621,8 +621,10 @@ vasprintf \
 asprintf \
 nanosleep \
 memmem \
-strerror_r \
 )
+
+dnl Check for strerror_r, and if its a POSIX-compatible or a GNU specific version.
+AC_FUNC_STRERROR_R
 
 AX_FUNC_WHICH_GETHOSTBYNAME_R
 
